# DP-on-Tree-Decompositions

./: .gitignore  CMakeLists.txt  README.md  solution_description.tex
src/: main.cpp
src/body/: min-vertex-cover-solver.cpp  min-vertex-cover.cpp  min_weighted_vertex_cover.cpp  tree_decomposition.cpp  undirected_graph.cpp  util.cpp
src/header/: min-vertex-cover-solver.h  min-vertex-cover.h  min_weighted_vertex_cover.h  tree_decomposition.h  undirected_graph.h  util.h
test/: CMakeLists.txt  CMakeLists_template.txt
test-instances/: github_example.txt  k_5_no_labels.csv
test-instances/Treewidth-PACE-2017-Instances/: ex001.gr.csv  ex001.td.csv  ex002.gr.csv  ex002.td.csv  ex003.gr.csv  ex003.td.csv  ex004.gr.csv  ex004.td.csv  ex005.gr.csv  ex005.td.csv  ex006.gr.csv  ex006.td.csv  ex007.gr.csv  ex007.td.csv  ex008.gr.csv  ex008.td.csv  ex009.gr.csv  ex009.td.csv  ex010.gr.csv  ex010.td.csv  ex011.gr.csv  ex011.td.csv  ex012.gr.csv  ex012.td.csv  ex013.gr.csv  ex013.td.csv  ex014.gr.csv  ex014.td.csv  ex015.gr.csv  ex015.td.csv  ex016.gr.csv  ex016.td.csv  ex017.gr.csv  ex017.td.csv  ex018.gr.csv  ex018.td.csv  ex019.gr.csv  ex019.td.csv  ex020.gr.csv  ex020.td.csv  (+1 more)
test-instances/parsing-test-instances/: cycle.csv  cycle_td.csv  cycle_td_subtree_disconnected.csv  cycle_td_vertex_missing.csv
test-instances/unit-test-instances/: cycle.gr.csv  cycle.td.csv  cycle_edge_missing.td.csv  house.gr.csv  house.td.csv  house_with_1_duplicate.td.csv  house_with_more_duplicates.td.csv  house_with_unneccesary_join.td.csv  k4_plus_2_appendages.gr.csv  k4_plus_2_appendages.td.csv  k4_plus_3_appendages.gr.csv  k4_plus_3_appendages.td.csv  k4_plus_4_appendages.gr.csv  k4_plus_4_appendages.td.csv  k5.gr.csv  sigma_graph.gr.csv  sigma_graph.td.csv
test/test_min_weighted_vertex_cover/: CMakeLists.txt  test_solve.cpp
test/tree_decomposition/: CMakeLists.txt  test_bridge_difference.cpp  test_get_treewidth.cpp  test_is_valid.cpp  test_make_n_join_node_nice.cpp  test_parse_unsafe.cpp  test_remove_duplicate_bags.cpp  test_root_tree.cpp  test_turn_into_nice_tree_decomposition.cpp
test/undirected_graph/: CMakeLists.txt  test_parse_unsafe.cpp  test_undirected_graph_parse_unsafe.cpp
test/util/: CMakeLists.txt  test_ends_with.cpp  test_filter.cpp  test_map.cpp  test_set.cpp  test_set_equal.cpp  test_string_split.cpp  test_strip_to_filename.cpp
